@@ -82,7 +82,10 @@ module Technoweenie # :nodoc:
             when nil
               processors = Technoweenie::AttachmentFu.default_processors.dup
               begin
-                include Technoweenie::AttachmentFu::Processors.const_get("#{processors.first}Processor") if processors.any?
+                if processors.any?
+                  attachment_options[:processor] = "#{processors.first}Processor"
+                  include Technoweenie::AttachmentFu::Processors.const_get(attachment_options[:processor])
+                end
               rescue LoadError, MissingSourceFile
                 processors.shift
                 retry
@@ -198,6 +201,8 @@ module Technoweenie # :nodoc:
         basename = filename.gsub /\.\w+$/ do |s|
           ext = s; ''
         end
+        # ImageScience doesn't create gif thumbnails, only pngs
+        ext.sub!(/gif$/, 'png') if attachment_options[:processor] == "ImageScienceProcessor"
         "#{basename}_#{thumbnail}#{ext}"
       end
 
